@@ -2,8 +2,6 @@ package dev.dsf.fhir.dao.jdbc;
 
 import java.sql.Connection;
 import java.sql.SQLException;
-import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.function.Function;
@@ -21,6 +19,7 @@ import dev.dsf.fhir.search.SearchQueryParameter;
 import dev.dsf.fhir.search.SearchQueryParameterFactory;
 import dev.dsf.fhir.search.parameters.StructureDefinitionDate;
 import dev.dsf.fhir.search.parameters.StructureDefinitionIdentifier;
+import dev.dsf.fhir.search.parameters.StructureDefinitionName;
 import dev.dsf.fhir.search.parameters.StructureDefinitionStatus;
 import dev.dsf.fhir.search.parameters.StructureDefinitionUrl;
 import dev.dsf.fhir.search.parameters.StructureDefinitionVersion;
@@ -42,26 +41,26 @@ abstract class AbstractStructureDefinitionDaoJdbc extends AbstractResourceDaoJdb
 
 	private final ReadByUrlDaoJdbc<StructureDefinition> readByUrl;
 
-	public AbstractStructureDefinitionDaoJdbc(DataSource dataSource, DataSource permanentDeleteDataSource,
+	protected AbstractStructureDefinitionDaoJdbc(DataSource dataSource, DataSource permanentDeleteDataSource,
 			FhirContext fhirContext, String resourceTable, String resourceColumn, String resourceIdColumn,
 			Function<Identity, SearchQueryIdentityFilter> userFilter)
 	{
 		super(dataSource, permanentDeleteDataSource, fhirContext, StructureDefinition.class, resourceTable,
 				resourceColumn, resourceIdColumn, userFilter,
-				Arrays.asList(
-						factory(resourceColumn, StructureDefinitionDate.PARAMETER_NAME, StructureDefinitionDate::new),
+				List.of(factory(resourceColumn, StructureDefinitionDate.PARAMETER_NAME, StructureDefinitionDate::new),
 						factory(resourceColumn, StructureDefinitionIdentifier.PARAMETER_NAME,
 								StructureDefinitionIdentifier::new, StructureDefinitionIdentifier.getNameModifiers()),
+						factory(resourceColumn, StructureDefinitionName.PARAMETER_NAME, StructureDefinitionName::new,
+								StructureDefinitionName.getNameModifiers()),
 						factory(resourceColumn, StructureDefinitionStatus.PARAMETER_NAME,
 								StructureDefinitionStatus::new, StructureDefinitionStatus.getNameModifiers()),
 						factory(resourceColumn, StructureDefinitionUrl.PARAMETER_NAME, StructureDefinitionUrl::new,
 								StructureDefinitionUrl.getNameModifiers()),
 						factory(resourceColumn, StructureDefinitionVersion.PARAMETER_NAME,
 								StructureDefinitionVersion::new, StructureDefinitionVersion.getNameModifiers())),
-				Collections.emptyList());
+				List.of());
 
-		readByUrl = new ReadByUrlDaoJdbc<StructureDefinition>(this::getDataSource, this::getResource, resourceTable,
-				resourceColumn);
+		readByUrl = new ReadByUrlDaoJdbc<>(this::getDataSource, this::getResource, resourceTable, resourceColumn);
 	}
 
 	@Override
