@@ -1,7 +1,6 @@
 package dev.dsf.fhir.dao.jdbc;
 
-import java.util.Arrays;
-import java.util.Collections;
+import java.util.List;
 
 import javax.sql.DataSource;
 
@@ -18,9 +17,9 @@ public class MeasureReportDaoJdbc extends AbstractResourceDaoJdbc<MeasureReport>
 	{
 		super(dataSource, permanentDeleteDataSource, fhirContext, MeasureReport.class, "measure_reports",
 				"measure_report", "measure_report_id", MeasureReportIdentityFilter::new,
-				Arrays.asList(factory(MeasureReportIdentifier.PARAMETER_NAME, MeasureReportIdentifier::new,
+				List.of(factory(MeasureReportIdentifier.PARAMETER_NAME, MeasureReportIdentifier::new,
 						MeasureReportIdentifier.getNameModifiers())),
-				Collections.emptyList());
+				List.of());
 	}
 
 	@Override
