@@ -5,7 +5,6 @@ import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 import java.util.Objects;
@@ -38,7 +37,7 @@ public class OrganizationAffiliationDaoJdbc extends AbstractResourceDaoJdbc<Orga
 		super(dataSource, permanentDeleteDataSource, fhirContext, OrganizationAffiliation.class,
 				"organization_affiliations", "organization_affiliation", "organization_affiliation_id",
 				OrganizationAffiliationIdentityFilter::new,
-				Arrays.asList(factory(OrganizationAffiliationActive.PARAMETER_NAME, OrganizationAffiliationActive::new),
+				List.of(factory(OrganizationAffiliationActive.PARAMETER_NAME, OrganizationAffiliationActive::new),
 						factory(OrganizationAffiliationEndpoint.PARAMETER_NAME, OrganizationAffiliationEndpoint::new,
 								OrganizationAffiliationEndpoint.getNameModifiers(),
 								OrganizationAffiliationEndpoint::new,
@@ -58,7 +57,7 @@ public class OrganizationAffiliationDaoJdbc extends AbstractResourceDaoJdbc<Orga
 								OrganizationAffiliationPrimaryOrganization.getIncludeParameterValues()),
 						factory(OrganizationAffiliationRole.PARAMETER_NAME, OrganizationAffiliationRole::new,
 								OrganizationAffiliationRole.getNameModifiers())),
-				Collections.emptyList());
+				List.of());
 	}
 
 	@Override
