@@ -5,7 +5,6 @@ import java.sql.PreparedStatement;
 import java.sql.ResultSet;
 import java.sql.SQLException;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.Collections;
 import java.util.List;
 
@@ -31,16 +30,15 @@ public class SubscriptionDaoJdbc extends AbstractResourceDaoJdbc<Subscription> i
 	{
 		super(dataSource, permanentDeleteDataSource, fhirContext, Subscription.class, "subscriptions", "subscription",
 				"subscription_id", SubscriptionIdentityFilter::new,
-				Arrays.asList(
-						factory(SubscriptionCriteria.PARAMETER_NAME, SubscriptionCriteria::new,
-								SubscriptionCriteria.getNameModifiers()),
+				List.of(factory(SubscriptionCriteria.PARAMETER_NAME, SubscriptionCriteria::new,
+						SubscriptionCriteria.getNameModifiers()),
 						factory(SubscriptionPayload.PARAMETER_NAME, SubscriptionPayload::new,
 								SubscriptionPayload.getNameModifiers()),
 						factory(SubscriptionStatus.PARAMETER_NAME, SubscriptionStatus::new,
 								SubscriptionStatus.getNameModifiers()),
 						factory(SubscriptionType.PARAMETER_NAME, SubscriptionType::new,
 								SubscriptionType.getNameModifiers())),
-				Collections.emptyList());
+				List.of());
 	}
 
 	@Override
@@ -50,8 +48,7 @@ public class SubscriptionDaoJdbc extends AbstractResourceDaoJdbc<Subscription> i
 	}
 
 	@Override
-	public List<Subscription> readByStatus(org.hl7.fhir.r4.model.Subscription.SubscriptionStatus status)
-			throws SQLException
+	public List<Subscription> readByStatus(Subscription.SubscriptionStatus status) throws SQLException
 	{
 		if (status == null)
 			return Collections.emptyList();
